Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36587

InnoDB uses too much memory, mtr OOMs

    XMLWordPrintable

Details

    Description

      after

      commit acd071f599f
      Author: Marko Mäkelä <marko.makela@mariadb.com>
      Date:   Thu Apr 10 13:02:17 2025 +0300
       
          MDEV-21923: LSN allocation is a bottleneck
      

      my ./mtr --parallel 20 uses all the memory. top shows that some mariadbd processes take 4.5g while others ~170m, the latter is normal, on the previous commit (acd071f599f^) all mariadbd processes take about 170m.

      Attachments

        Activity

          People

            marko Marko Mäkelä
            serg Sergei Golubchik
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: