MDEV-36587 InnoDB uses too much memory

log_t::clear_mmap(): Do not modify buf_size; we may have
file_size==0 here during bootstrap.

log_t::set_recovered(): If we are writing to a memory-mapped log,
update log_sys.buf_size to the record payload area of log_sys.buf.

This fixes up commit acd071f599f416ddb4821dec485c4d912844213f
(MDEV-21923).